@@ -19,45 +19,46 @@ import org.powermock.api.easymock.internal.mockpolicies.AbstractEasyMockLogPolic
 
 
 /**
- * A log4j mock policy. This mock policy deals with solving log4j related
- * mocking issues. It takes care of loading all concerned log4j classes through
- * the correct class-loader and automatically prepares and injects logger
- * instances. This policy does the following:
+ * A Jakarta Commons-Logging (JCL) mock policy. This mock policy deals with
+ * solving JCL related mocking issues. It takes care of loading all concerned
+ * JCL classes through the correct class-loader and automatically prepares and
+ * injects logger instances. This policy does the following:
  * <ol>
- * <li>Prepares all log4j classes and interfaces for testing.</li>
- * <li>All calls to the <tt>org.apache.log4j.Logger#getLogger(..)</tt> methods
- * are intercepted and returns a nice mock of type
- * <tt>org.apache.log4j.Logger</tt>.</li>
+ * <li>Prepares all classes in the <tt>org.apache.commons.logging</tt> for test
+ * as well as <tt>org.apache.log4j.Appender</tt> and
+ * <tt>org.apache.log4j.xml.DOMConfigurator</tt>.</li>
+ * <li>All calls to the
+ * <tt>org.apache.commons.logging.LogFactory#getLog(..)</tt> methods are
+ * intercepted and returns a nice mock of type
+ * <tt>org.apache.commons.logging.Log</tt>.</li>
  * </ol>
  */
-public class Log4jMockPolicy extends AbstractEasyMockLogPolicyBase {
-
-	private static final String LOGGER_CLASS = "org.apache.log4j.Logger";
+public class JclMockPolicy extends AbstractEasyMockLogPolicyBase {
 
 	/**
 	 * Loads all log4j classes with the mock classloader.
 	 */
 	public String[] getFullyQualifiedNamesOfClassesToLoadByMockClassloader() {
-		return new String[] { "org.apache.log4j." };
+		return new String[] { "org.apache.commons.logging.", "org.apache.log4j.Appender", "org.apache.log4j.xml.DOMConfigurator" };
 	}
 
 	@Override
 	protected String getLogFrameworkName() {
-		return "log4j";
+		return "commons-logging";
 	}
 
 	@Override
 	protected String getLoggerClassToMock() {
-		return LOGGER_CLASS;
+		return "org.apache.commons.logging.Log";
 	}
 
 	@Override
 	protected String getLoggerFactoryClassName() {
-		return LOGGER_CLASS;
+		return "org.apache.commons.logging.LogFactory";
 	}
 
 	@Override
 	protected String getLoggerMethodName() {
-		return "getLogger";
+		return "getLog";
 	}
 }
